# querycsv

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: check.yaml
src/: main.rs
