[package]
name = "querycsv"
version = "0.1.0"
edition = "2021"
authors = ["Tim Kotowski <tkotowski7@gmail.com>"]
description = "Fast csv query builder"
readme = "README.md"
keywords = ["csv", "comma", "query", "search", "serde", "sql"]
license = "Unlicense OR MIT"
categories = ["query", "parser"]
rust-version = "1.64"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
